--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dev_dependencies:
   geolocator: ^8.2.1
   http: ^0.13.4
   flutter_spinkit: ^5.1.0
+  intl: ^0.17.0
   flutter_test:
     sdk: flutter
 
